--- a/_config.yml
+++ b/_config.yml
@@ -68,4 +68,6 @@ theme: chan
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:atnanasi/atnanasi.github.io.git
+  branch: gh-pages
