Remove chan theme

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Blog
 subtitle: ゴミ(長文・ポエム)置き場
 description: つらつら書いてます
 author: Atnanasi
-language: ja
+language: en
 timezone: Asia/Tokyo
 
 # URL
