--- a/themes/chan/_config.yml
+++ b/themes/chan/_config.yml
@@ -8,8 +8,8 @@ favicon: /favicon.png
 monochrome: true
 
 # view setting
-avatar: https://cn.gravatar.com/avatar/35fef74d731255cd569c2c2b0b9e87e4?s=200
-avatarLink: /about
+avatar: https://cdn.atnanasi.tk/icons/icon.png
+avatarLink: https://atnanasi.tk
 maxContentWidth: 1000px # set the main content column's max-width property. keep it blank to unlimited the width
 copyright: # the copyright text in the footer, could be richtext
 
@@ -28,17 +28,17 @@ nav:
   -
     -
       name: Homepage
-      url: '/'
+      url: 'https://atnanasi.tk'
     -
       name: By Year
       url: /archives
   -
     -
-      name: Chan
-      url: https://github.com/denjones/hexo-theme-chan
+      name: Twitter
+      url: https://twitter.com/atnanasi
     -
       name: Github
-      url: https://github.com/denjones
+      url: https://github.com/atnanasi
     -
       name: RSS
       url: /atom.xml
