bought-a-tdplを書きました

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Blog
+title: Atnanasi's Blog
 subtitle: ゴミ(長文・ポエム)置き場
 description: つらつら書いてます
 author: Atnanasi
