--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo-cli-extras": "^1.0.4",
     "hexo-deployer-git": "^0.2.0",
     "hexo-filter-github-emojis": "^1.1.0",
+    "hexo-filter-highlight": "0.0.3",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.0",
