--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: Asia/Tokyo
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://atnanasi.github.io
+url: https://blog.atnanasi.tk
 root: /blog
 permalink: :year/:month/:day/:title/
 permalink_defaults:
